--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "apexcharts": "^3.27.3",
     "axios": "^0.21.4",
     "core-js": "^3.6.5",
+    "firebase": "8.10.0",
     "geocoder": "^0.2.3",
     "gmap-vue": "^1.5.0",
     "handsontable": "^9.0.2",
